--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
+    <script type="text/javascript" src="/javascripts/script.js"></script>
   </body>
 </html>
