--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
+    <script type="text/javascript" src="/javascripts/jquery-2.0.3.min.js"></script>
   </head>
   <body>
     <h1>Hello, World!</h1>
