--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -2,10 +2,26 @@
 <html>
 	<head>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
-    <script type="text/javascript" src="/javascripts/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery.js"></script>
+    <script type="text/javascript" src="/javascripts/knockout.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Sample App #1</h1>
+    <p>
+      The source code for this application may be found on <a href="http://github.com/jarrettmeyer/learning-node">Github</a>.
+    </p>
+
+    <table>
+      <thead>
+      </thead>
+      <tbody data-bind="foreach: tasks">
+        <tr>
+          <td data-bind="text: description"></td>
+          <td data-bind="text: assignedTo"></td>
+        </tr>
+      </tbody>
+    </table>
+
     <script type="text/javascript" src="/javascripts/script.js"></script>
   </body>
 </html>
