reset functionality now working

--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -44,6 +44,7 @@
       </div>
       <div class="input-group">
         <button type="button" id="save-task" data-bind="click: $root.saveTask">Save</button>
+        <button type="button" id="cancel-edit" data-bind="click: $root.cancelEdit">Cancel</button>
       </div>
     </form>
 
