Supports completing a task
Added class (and tests) to support pulling the ID from the URL.

Adds CSS class to show completed tasks.

--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody data-bind="foreach: tasks">
-        <tr>
+        <tr data-bind="css: taskCss">
           <td>
             <a href="#" data-bind="click: $root.editTask, enable: $root.allowEdit">
               <img src="/images/pencil.png"/>
