confirmed delete task code is working

--- a/sample_app_1/content/index.html
+++ b/sample_app_1/content/index.html
@@ -22,9 +22,15 @@
       </thead>
       <tbody data-bind="foreach: tasks">
         <tr data-bind="css: taskCss">
-          <td>
-            <a href="#" data-bind="click: $root.editTask, enable: $root.allowEdit">
+          <td style="white-space: nowrap;">
+            <a href="#" title="Edit" data-bind="click: $root.editTask, enable: $root.allowEdit">
               <img src="/images/pencil.png"/>
+            </a>
+            <a href="#" title="Complete" data-bind="click: $root.completeTask">
+              <img src="/images/accept.png"/>
+            </a>
+            <a href="#" title="Delete" data-bind="click: $root.deleteTask">
+              <img src="/images/cross.png"/>
             </a>
           </td>
           <td data-bind="text: description"></td>
